--- a/index.html
+++ b/index.html
@@ -11,56 +11,68 @@
 </head>
 
 <body>
-    <header>
-        <img src="img/Logo.svg" alt="">
-        <img src="img/Hamburger Menu.svg" alt="">
-    </header>
+    <div class="head-sec-1">
 
-    <section class="section-1">
-        <div class="sec-1-1">
-            <h1>
-                Post when your audience is most active.
-            </h1>
-            <p>
-                With TimeNow, automatically schedule your posts on Twitter Linkedin, and Instagram to post when your
-                followers
-                are most active.
-            </p>
+        <section class="section-1">
+            <header>
+                <div><img src="img/Logo.svg" alt=""></div>
 
-            <div class="link-con">
-                <a href="#" class="btn-link">Start Scheduling</a>
-                <a href="#" class="alt-link">View Demo</a>
-            </div>
+                <div class="mobile"><img src="img/Hamburger Menu.svg" alt="">
+                </div>
 
-            <div class="tag">
-                <img src="img/Shield.svg" alt="" width="7%">
-                <p>TimeNow does not sell your data <br>
-                    <a href="#">Learn More</a>
+                <div class="desktop">
+                    <a href="#">Features</a>
+                    <a href="#">Pricing</a>
+                </div>
+            </header>
+
+            <div class="sec-1-1">
+                <h1>
+                    Post when your audience is most active.
+                </h1>
+                <p>
+                    With TimeNow, automatically schedule your posts on Twitter Linkedin, and Instagram to post when your
+                    followers
+                    are most active.
                 </p>
-            </div>
-        </div>
 
+                <div class="link-con">
+                    <a href="#" class="btn-link">Start Scheduling</a>
+                    <a href="#" class="alt-link">View Demo</a>
+                </div>
+
+                <div class="tag">
+                    <img src="img/Shield.svg" alt="" width="7%">
+                    <p>TimeNow does not sell your data <br>
+                        <a href="#">Learn More</a>
+                    </p>
+                </div>
+            </div>
+        </section>
 
         <div class="mockup-con">
             <img src="img/Mockup.png" alt="" width="80%">
         </div>
-    </section>
+
+    </div>
 
 
     <section class="section-2">
-        <h1>TimeNow is used by most influential people.</h1>
+        <div class="h1-div-con">
+            <h1>TimeNow is used by most influential people.</h1>
 
-        <div>
-            <img src="img/UA1.png" alt="" width="15%">
-            <img src="img/UA2.png" alt="" width="15%">
-            <img src="img/UA3.png" alt="" width="15%">
-            <img src="img/UA4.png" alt="" width="15%">
-            <img src="img/UA5.png" alt="" width="15%">
-            <img src="img/UA6.png" alt="" width="15%">
-            <img src="img/UA7.png" alt="" width="15%">
-            <img src="img/UA8.png" alt="" width="15%">
+            <div>
+                <img src="img/UA1.png" alt="" width="15%">
+                <img src="img/UA2.png" alt="" width="15%">
+                <img src="img/UA3.png" alt="" width="15%">
+                <img src="img/UA4.png" alt="" width="15%">
+                <img src="img/UA5.png" alt="" width="15%">
+                <img src="img/UA6.png" alt="" width="15%">
+                <img src="img/UA7.png" alt="" width="15%">
+                <img src="img/UA8.png" alt="" width="15%">
+            </div>
         </div>
-
+        
         <p>
             The most influential people on Facebook, Twitter, and instagram are using TweetNow to schedule posts when
             their
